--- a/less/variables.less
+++ b/less/variables.less
@@ -7,6 +7,8 @@
 // Standard page text
 @font-titillium : 'Titillium Web', sans-serif;
 @font-btn: @font-cabin;
+@font-input: 1.8rem;
+@font-btn: 2rem;
 
 
 // Colors
