--- a/less/global.less
+++ b/less/global.less
@@ -2,3 +2,50 @@
 :root {
     font-size: 62.5%;
 }
+
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    font-family: @font-titillium;
+    height: 100%;
+    margin: 0;
+}
+
+h1 {
+    font-size: 3.2rem;
+}
+
+h2 {
+    font-size: 2.4rem;
+}
+
+p {
+    font-size: 2rem;
+}
+
+a.url:hover {
+    color: seagreen;
+}
+
+a.url {
+    color: lightseagreen;
+    text-decoration: none;
+}
+
+a {
+    font-size: 2rem;
+}
+
+button {
+    cursor: pointer;
+}
+
+input[type="submit"] {
+    cursor: pointer;
+}
+
+
+
+
