--- a/less/navigation.less
+++ b/less/navigation.less
@@ -27,7 +27,7 @@
         h2 {
             white-space: nowrap;
             padding-left: 6%;
-            font-size: 1.2rem;
+            // font-size: 1.2rem;
             color: @white;
         }
     }
