add padding to allow for graph

--- a/css/index.css
+++ b/css/index.css
@@ -622,6 +622,8 @@ input[type="submit"] {
   margin: 0 auto;
   display: flex;
   position: relative;
+  padding-top: 25px;
+  padding-bottom: 250px;
 }
 @media (max-width: 500px) {
   .search-results {
