--- a/less/home-page.less
+++ b/less/home-page.less
@@ -375,6 +375,8 @@
     margin: 0 auto;
     display: flex;
     position: relative;
+    padding-top: 25px;
+    padding-bottom: 250px;
 
     @media @phone {
         display: flex;
