--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ input[type="submit"] {
   justify-content: space-between;
   background: #2F2F2F;
   font-family: 'Cabin', sans-serif;
-  padding: 0.75% 0 0.75%;
+  padding: 0.25% 0 0.25%;
 }
 @media (max-width: 600px) {
   .header-navigation {
@@ -357,7 +357,7 @@ input[type="submit"] {
   height: 35px;
   margin-top: 15px;
   font-family: 'Cabin', sans-serif;
-  font-size: 2rem;
+  font-size: 1.9rem;
 }
 .video-container .search-container .search-box p {
   color: #FFFFFF;
@@ -539,7 +539,7 @@ input[type="submit"] {
 }
 .contact-form form #submit {
   font-family: 'Cabin', sans-serif;
-  font-size: 2rem;
+  font-size: 1.9rem;
   width: 40%;
   margin: 0 auto;
   margin-top: 10px;
@@ -608,6 +608,9 @@ input[type="submit"] {
   width: 100%;
   padding: 15px;
 }
+.container.about .developer .devBio h2 {
+  padding: 10px 0;
+}
 .show {
   opacity: 1;
 }
@@ -624,6 +627,7 @@ input[type="submit"] {
   position: relative;
   padding-top: 25px;
   padding-bottom: 250px;
+  border-radius: 6px;
 }
 @media (max-width: 500px) {
   .search-results {
@@ -642,6 +646,7 @@ input[type="submit"] {
   width: 300px;
   height: 300px;
   margin: 20px;
+  border-radius: 5px;
 }
 .search-again {
   max-width: 1000px;
@@ -656,7 +661,7 @@ input[type="submit"] {
 .search-again button {
   text-align: center;
   padding: 15px;
-  font-size: 2rem;
+  font-size: 1.9rem;
   background-color: green;
   border-radius: 5px;
   color: #FFFFFF;
