--- a/less/home-page.less
+++ b/less/home-page.less
@@ -353,6 +353,9 @@
             // background-color: lightgray;
             width: 100%;
             padding: 15px;
+            h2 {
+                padding: 10px 0;
+            }
         }
     }
 }
@@ -377,6 +380,7 @@
     position: relative;
     padding-top: 25px;
     padding-bottom: 250px;
+    border-radius: 6px;
 
     @media @phone {
         display: flex;
@@ -395,6 +399,7 @@
         width: 300px;
         height: 300px;
         margin: 20px;
+        border-radius: 5px;
     }
 }
 
