h1 style change on index

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -57,6 +57,7 @@
                 color: @white;
                 text-align: center;
                 padding-bottom: 15px;
+                font-size: 4.3rem;
 
                 @media @phone {
                     color: @black;
